--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,89 @@
-header {
-    margin-top: 30px;
-}
 .img-fluid {
-    max-width: 20%;
+    max-width: 50%;
     height: auto;
     margin: auto;
     display: block;
+}
+header {
+    background-color:#d5b7da45;
+    border-bottom-left-radius: 150px;
+    border-bottom-right-radius: 150px;
+}
+img {
+    position: relative;
+    width: 100%;
+}
+
+.form-control {
+    border-radius: 20px;
+    border: 0.5rem outset rgb(252, 208, 215);
+    font: bold 1rem sans-serif;
+    padding: 1rem;
+    outline-offset: 0.5rem;
+}
+.search {
+    width: 50%;
+    position: absolute;
+    top: 30%;
+    left: 25%;
+    display: flex;
+}
+.btn-light {
+    margin-left: 20px;
+    border: none;
+    border-radius: 50px;
+    background-color: rgb(252, 208, 215);
+    padding-top: 19px;
+    padding-right: 19px;
+    padding-left: 19px;
+}
+
+@media screen and (min-width: 500px) {
+  .search {
+    position: absolute;
+    top: 28%;
+    left: 6%;
+    width: 90%;
+  }
+}
+@media screen and (min-width: 400px) {
+  .search {
+    position: absolute;
+    top: 24%;
+    left: 6%;
+    width: 90%;
+  }
+  .btn-light {
+    margin-left: 10px;
+  }
+}
+@media screen and (min-width: 375px) {
+  .search {
+    position: absolute;
+    top: 26%;
+    left: 6%;
+    width: 90%;
+  }
+  .btn-light {
+    margin-left: 10px;
+  }
+  header {
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+}
+}
+@media screen and (min-width: 320px) {
+  .search {
+    position: absolute;
+    top: 27%;
+    left: 6%;
+    width: 90%;
+  }
+  .btn-light {
+    margin-left: 10px;
+  }
+  header {
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+}
 }
