--- a/src/App.css
+++ b/src/App.css
@@ -22,45 +22,55 @@ img {
     outline-offset: 0.5rem;
 }
 .search {
-    width: 50%;
     position: absolute;
     top: 30%;
     left: 25%;
     display: flex;
+    width: 50%;
 }
 .btn-light {
     margin-left: 20px;
     border: none;
     border-radius: 50px;
     background-color: rgb(252, 208, 215);
-    padding-top: 19px;
+    padding-top: 10px;
     padding-right: 19px;
     padding-left: 19px;
 }
-
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 800px) {
   .search {
-    position: absolute;
-    top: 28%;
-    left: 6%;
-    width: 90%;
+    left: 15%;
+    width: 70%;
   }
 }
-@media screen and (min-width: 400px) {
+
+@media screen and (max-width: 539px) {
   .search {
     position: absolute;
-    top: 24%;
+    top: 220px;
+    left: 11%;
+    width: 80%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .search {
+    position: absolute;
+    top: 182px;
     left: 6%;
     width: 90%;
   }
   .btn-light {
     margin-left: 10px;
   }
+   header {
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
 }
-@media screen and (min-width: 375px) {
+}
+@media screen and (max-width: 375px) {
   .search {
     position: absolute;
-    top: 26%;
+    top: 173px;
     left: 6%;
     width: 90%;
   }
@@ -72,10 +82,10 @@ img {
     border-bottom-right-radius: 100px;
 }
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
   .search {
     position: absolute;
-    top: 27%;
+    top: 155px;
     left: 6%;
     width: 90%;
   }
