--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,6 @@ body {
   margin: auto;
   display: block;
 }
-header {
-  background-color: #d5b7da45;
-  border-bottom-left-radius: 100px;
-  border-bottom-right-radius: 100px;
-}
 img {
   position: relative;
   width: 100%;
@@ -20,25 +15,29 @@ img {
   padding: 1rem;
   border: none;
   border-radius: 25px;
-  background-color: rgb(252, 208, 215);
+  background-color: #eccfcf4c;
+  width: 100%;
+  margin-bottom: 5px;
 }
-
-.search {
-  display: flex;
-  justify-content: center;
+.hint {
+  padding-left: 5px;;
 }
-.btn-light {
-  margin-left: 20px;
-  border: none;
-  border-radius: 50px;
-  background-color: rgb(252, 208, 215);
-  padding-top: 10px;
-  padding-right: 19px;
-  padding-left: 19px;
+.searchHint {
+  background-color: white;
+  padding: 26px 50px;
+  border-radius: 25px;
+  box-shadow: 0px 5px 10px rgb(0 0 0 / 10%);
 }
-
 a {
   text-decoration: none;
+}
+.definition {
+  color: #ad71ea;
+  font-weight: bold;
+}
+.example {
+  font-style: italic;
+  font-size: 14px;;
 }
 @media screen and (max-width: 539px) {
   .btn-light {
